Fix input label not showing

--- a/style/style.css
+++ b/style/style.css
@@ -506,6 +506,7 @@ input:invalid:not(:placeholder-shown):not(:focus-visible) + span::before {
 }
 
 #book-form > div > label {
+  z-index: 1;
   position: absolute;
   left: 1rem;
   color: var(--grey);
